/**
 * This is the driver class for running the Payroll processing system
 * @author Malav Doshi and Herik Patel
 */
public class RunProject2 {
    /**
     * Used to run the PayrollProcessing class
     * @param args No input needed
     */
    public static void main(String[] args) {
        new PayrollProcessing().run();
    }
}